# libpythonpro

./: .pre-commit-config.yaml  .pyup.yml  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: libpythonpro_project.yml  python-app.yml
libpythonpro/.github/workflows/: libpythonpro_project.yml
libpythonpro/tests/test_spam/: test_envio_para_base_de_usuarios.py  test_github_api.py
