[tool.poetry]
name = "libpythonpro"
version = "0.2.0"
description = "Módulo para exemplificar construção de projetos Python no curso PyTools"
authors = ["Renzo Nuccitelli <renzo@python.pro.br>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/pythonprobr/libpythonpro"
keywords = ["education", "pythonpro"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Framework :: Pytest",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
